# activity_tracker

./: Activity.cpp  Activity.h  CMakeLists.txt  ColorsAndFonts.h  FrameActivity.cpp  FrameActivity.h  FrameDay.cpp  FrameDay.h  Observer.h  Register.cpp  Register.h  Subject.h  main.cpp
test/: ActivityFixture.cpp  ActivityTest.cpp  CMakeLists.txt  RegisterFixture.cpp  RegisterTest.cpp  runAllTests.cpp
